some fixes in places gap in grid

--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,6 @@
 .place__image {
+  margin: 0;
+  padding: 0;
   grid-area: image;
   max-width: 100%;
 }
