--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,10 @@
 .place__paragraph {
-  margin: 0 16px;
+  margin: 0;
   padding: 0;
   margin-bottom: 25px;
   font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  line-height: 26px;
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -12,15 +12,10 @@
   margin-bottom: 0;
 }
 
-@media screen and (min-width: 768px) {
-  .place__paragraph {
-    margin: 0;
-  }
-}
-
 @media screen and (min-width: 1024px) {
   .place__paragraph {
     font-size: 18px;
     line-height: 29px;
+    margin-bottom: 26px;
   }
 }
